# pylint-restricted-imports

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: ci.yaml
pylint_forbidden_imports/: __init__.py
pylint_restricted_imports/: __init__.py
tests/: test_imports.py
