[tool.poetry]
name = "pylint-restricted-imports"
version = "0.1.1"
license = "MIT"
description = "pylint-restricted-imports is a Pylint plugin to restrict what imports are allowed in different modules"
authors = [
    "Pexip AS <packaging@pexip.com>",
    "Huw Jones <huw@pexip.com>",
]
repository = "https://github.com/pexip/pylint-restricted-imports"
readme = "README.rst"
keywords = ["pylint", "plugin", "imports"]
classifiers = [
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Quality Assurance',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "pylint_restricted_imports"}
]
exclude = [
    "**/tests/**/*",
    "**/test/**/*",
]

[build-system]
requires = ["setuptools>=40.8.0", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
importlib-metadata = {version = "^1.0", python = "<3.8"}
astroid = ">=1.0"
pylint = ">=1.0"

[tool.poetry.dev-dependencies]
pytest = ">=1.0"
